Delay division update till server id
This makes sure Map & Server Id are correct when the event is fired
(server id is last on the scoreboard)